--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,9 +18,7 @@
   "bugs": "",
   "keywords": [],
   "author": {
-    "name": "",
-    "email": "",
-    "url": ""
+    "name": ""
   },
   "contributors": [],
   "scripts": {
