--- a/package.json
+++ b/package.json
@@ -1,68 +1,13 @@
 {
-
-  "version": "1.0.0",
-
-  "description": "",
-
-  "main": "index.js",
-
   "type": "module",
-
-  "license": "AGPL-version-3.0",
-
-  "private": false,
-
-  "engines": {
-
-    "node": ">= 14.0.0",
-
-    "npm": ">= 6.0.0"
-
-  },
-
-  "homepage": "",
-
-  "repository": {
-
-    "type": "git",
-
-    "url": ""
-
-  },
-
-  "bugs": "",
-
-  "keywords": [],
-
-  "author": {
-
-    "name": ""
-
-  },
-
-  "contributors": [],
-
-  "scripts": {
-    "start": "nodemon ./src/main.js",
-    "dev": "",
-
-    "test": ""
-
-  },
-
   "dependencies": {
-
-    "dotenv": "^16.0.1",
-
-    "express": "^4.18.1"
-
-  },
-
-  "devDependencies": {
-
-    "nodemon": "^2.0.18"
-
+    "dirname": "^0.1.0",
+    "json": "^11.0.0",
+    "nodemon": "^2.0.18",
+    "ru": "^0.0.2",
+    "run": "^1.4.0",
+    "start": "./index.js",
+    "supertest": "^6.2.3",
+    "verbose": "^0.2.3"
   }
-
 }
-
