--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "dirname": "^0.1.0",
     "express": "^4.18.1",
     "json": "^11.0.0",
-    "nodemon": "^2.0.18",
-    "ru": "^0.0.2",
+    "nodemon": "^1.3.3",
+    "ru": "^0.0.0",
     "run": "^1.4.0",
+    "sqlite3": "^5.0.8",
     "start": "node ./index.js",
     "supertest": "^6.2.3",
     "verbose": "^0.2.3"
