--- a/package.json
+++ b/package.json
@@ -1,15 +1,403 @@
 {
   "type": "module",
+  "name": "projeto_m4",
+  "version": "1.0.0",
+  "description": "<h4 align=\"center\"> \r     :construction: - - Projeto em Construção - -  :construction:\r </h4>\r <h1 align=\"center\" style='font-family: Righteous'> Estúdio Seven - Estúdio de Tatuagem ✒️</h1>\r <img src=\"./src/assets/img/bannerStudioSeven.png\">",
+  "main": "app.js",
   "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "agent-base": "^6.0.2",
+    "agentkeepalive": "^4.2.1",
+    "aggregate-error": "^3.1.0",
+    "ajv": "^6.12.6",
+    "ansi-align": "^2.0.0",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^2.0.0",
+    "aproba": "^2.0.0",
+    "are-we-there-yet": "^2.0.0",
+    "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-flatten": "^1.1.1",
+    "array-unique": "^0.3.2",
+    "asap": "^2.0.6",
+    "asn1": "^0.2.6",
+    "assert-plus": "^1.0.0",
+    "assign-symbols": "^1.0.0",
+    "async-each": "^1.0.3",
+    "asynckit": "^0.4.0",
+    "atob": "^2.1.2",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.11.0",
+    "backoff": "^2.3.0",
+    "balanced-match": "^1.0.2",
+    "base": "^0.11.2",
+    "base64id": "^0.1.0",
+    "bcrypt-pbkdf": "^1.0.2",
+    "binary-extensions": "^1.13.1",
+    "body-parser": "^1.20.0",
+    "boxen": "^1.3.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^2.3.2",
+    "bytes": "^3.1.2",
+    "cacache": "^15.3.0",
+    "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
+    "camelcase": "^4.1.0",
+    "capture-stack-trace": "^1.0.1",
+    "caseless": "^0.12.0",
+    "chalk": "^2.4.2",
+    "chokidar": "^2.1.8",
+    "chownr": "^2.0.0",
+    "ci-info": "^1.6.0",
+    "class-utils": "^0.3.6",
+    "clean-stack": "^2.2.0",
+    "cli-boxes": "^1.0.0",
+    "collection-visit": "^1.0.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "color-support": "^1.1.3",
+    "combined-stream": "^1.0.8",
+    "commander": "^0.6.1",
+    "component-emitter": "^1.3.0",
+    "concat-map": "^0.0.1",
+    "configstore": "^3.1.5",
+    "console-control-strings": "^1.1.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "cookiejar": "^2.1.3",
+    "copy-descriptor": "^0.1.1",
+    "core-util-is": "^1.0.2",
+    "cors": "^2.8.5",
+    "create-error-class": "^3.0.2",
+    "cross-spawn": "^5.1.0",
+    "crypto-random-string": "^1.0.0",
+    "dashdash": "^1.14.1",
+    "data-channel": "^0.2.2",
+    "debug": "^0.6.0",
+    "decode-uri-component": "^0.2.0",
+    "deep-extend": "^0.6.0",
+    "define-property": "^2.0.2",
+    "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "detect-libc": "^2.0.1",
+    "dezalgo": "^1.0.3",
     "dirname": "^0.1.0",
+    "dot-prop": "^4.2.1",
+    "dotenv": "^16.0.1",
+    "duplex-emitter": "^2.1.2",
+    "duplexer": "^0.0.4",
+    "duplexer3": "^0.1.4",
+    "ecc-jsbn": "^0.1.2",
+    "ee-first": "^1.1.1",
+    "emitter": "^1.0.1",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^1.0.2",
+    "encoding": "^0.1.13",
+    "engine.io": "^0.7.12",
+    "engine.io-client": "^0.7.12",
+    "engine.io-parser": "^0.3.0",
+    "engine.io-stream": "^0.4.3",
+    "env-paths": "^2.2.1",
+    "err-code": "^2.0.3",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "etag": "^1.8.1",
+    "execa": "^0.7.0",
+    "expand-brackets": "^2.1.4",
     "express": "^4.18.1",
+    "extend": "^3.0.2",
+    "extend-shallow": "^2.0.1",
+    "extglob": "^2.0.4",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-safe-stringify": "^2.1.1",
+    "faye-websocket": "^0.4.4",
+    "fill-range": "^4.0.0",
+    "finalhandler": "^1.2.0",
+    "for-in": "^1.0.2",
+    "forever-agent": "^0.6.1",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
+    "forwarded": "^0.2.0",
+    "fragment-cache": "^0.2.1",
+    "fresh": "^0.5.2",
+    "fs-minipass": "^2.1.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "gauge": "^3.0.2",
+    "get-intrinsic": "^1.1.2",
+    "get-stream": "^3.0.0",
+    "get-value": "^2.0.6",
+    "getpass": "^0.1.7",
+    "glob": "^7.2.3",
+    "glob-parent": "^3.1.0",
+    "global": "^2.0.1",
+    "global-dirs": "^0.1.1",
+    "got": "^6.7.1",
+    "graceful-fs": "^4.2.10",
+    "har-schema": "^2.0.0",
+    "har-validator": "^5.1.5",
+    "has": "^1.0.3",
+    "has-cors": "^1.0.2",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.3",
+    "has-unicode": "^2.0.1",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "hexoid": "^1.0.0",
+    "http-cache-semantics": "^4.1.0",
+    "http-errors": "^2.0.0",
+    "http-proxy-agent": "^4.0.1",
+    "http-signature": "^1.2.0",
+    "https-proxy-agent": "^5.0.1",
+    "humanize-ms": "^1.2.1",
+    "iconv-lite": "^0.4.24",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "indexof": "^0.0.1",
+    "infer-owner": "^1.0.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "invert-stream": "^0.0.1",
+    "ip": "^1.1.8",
+    "ipaddr.js": "^1.9.1",
+    "is-accessor-descriptor": "^1.0.0",
+    "is-binary-path": "^1.0.1",
+    "is-buffer": "^1.1.6",
+    "is-ci": "^1.2.1",
+    "is-data-descriptor": "^1.0.0",
+    "is-descriptor": "^1.0.2",
+    "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-glob": "^4.0.3",
+    "is-installed-globally": "^0.1.0",
+    "is-lambda": "^1.0.1",
+    "is-npm": "^1.0.0",
+    "is-number": "^3.0.0",
+    "is-obj": "^1.0.1",
+    "is-path-inside": "^1.0.1",
+    "is-plain-object": "^2.0.4",
+    "is-redirect": "^1.0.0",
+    "is-retry-allowed": "^1.2.0",
+    "is-stream": "^1.1.0",
+    "is-typedarray": "^1.0.0",
+    "is-windows": "^1.0.2",
+    "isarray": "^0.0.1",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "isstream": "^0.1.2",
+    "jest": "^28.1.2",
+    "jsbn": "^0.1.1",
     "json": "^11.0.0",
-    "nodemon": "^1.3.3",
+    "json-schema": "^0.4.0",
+    "json-schema-traverse": "^0.4.1",
+    "json-stringify-safe": "^5.0.1",
+    "jsprim": "^1.4.2",
+    "kind-of": "^3.2.2",
+    "latest-version": "^3.1.0",
+    "lowercase-keys": "^1.0.1",
+    "lru-cache": "^6.0.0",
+    "make-dir": "^3.1.0",
+    "make-fetch-happen": "^9.1.0",
+    "map-cache": "^0.2.2",
+    "map-visit": "^1.0.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "micromatch": "^3.1.10",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
+    "minipass": "^3.3.4",
+    "minipass-collect": "^1.0.2",
+    "minipass-fetch": "^1.4.1",
+    "minipass-flush": "^1.0.5",
+    "minipass-pipeline": "^1.2.4",
+    "minipass-sized": "^1.0.3",
+    "minizlib": "^2.1.2",
+    "mixin-deep": "^1.3.2",
+    "ms": "^2.1.3",
+    "nan": "^0.3.2",
+    "nanomatch": "^1.2.13",
+    "negotiator": "^0.6.3",
+    "node-addon-api": "^4.3.0",
+    "node-fetch": "^2.6.7",
+    "node-gyp": "^8.4.1",
+    "node-uuid": "^1.4.8",
+    "nodemon": "^1.19.4",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^2.0.2",
+    "npmlog": "^5.0.1",
+    "oauth-sign": "^0.9.0",
+    "object-assign": "^4.1.1",
+    "object-copy": "^0.1.0",
+    "object-inspect": "^1.12.2",
+    "object-keys": "^0.4.0",
+    "object-visit": "^1.0.1",
+    "object.pick": "^1.3.0",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "options": "^0.0.6",
+    "p-finally": "^1.0.0",
+    "p-map": "^4.0.0",
+    "package-json": "^4.0.1",
+    "parseurl": "^1.3.3",
+    "pascalcase": "^0.1.1",
+    "path-dirname": "^1.0.2",
+    "path-is-absolute": "^1.0.1",
+    "path-is-inside": "^1.0.2",
+    "path-key": "^2.0.1",
+    "path-to-regexp": "^0.1.7",
+    "performance-now": "^2.1.0",
+    "pify": "^3.0.0",
+    "posix-character-classes": "^0.1.1",
+    "prepend-http": "^1.0.4",
+    "process-nextick-args": "^2.0.1",
+    "promise-inflight": "^1.0.1",
+    "promise-retry": "^2.0.1",
+    "propagate": "^2.0.1",
+    "proxy-addr": "^2.0.7",
+    "pseudomap": "^1.0.2",
+    "psl": "^1.8.0",
+    "pstree.remy": "^1.1.8",
+    "punycode": "^2.1.1",
+    "qs": "^6.10.3",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "rc": "^1.2.8",
+    "readable-stream": "^3.6.0",
+    "readdirp": "^2.2.1",
+    "reconnect": "^2.0.2",
+    "reconnect-core": "^0.2.2",
+    "regex-not": "^1.0.2",
+    "registry-auth-token": "^3.4.0",
+    "registry-url": "^3.1.0",
+    "remove-trailing-separator": "^1.1.0",
+    "repeat-element": "^1.1.4",
+    "repeat-string": "^1.6.1",
+    "request": "^2.88.2",
+    "resolve-url": "^0.2.1",
+    "ret": "^0.1.15",
+    "retry": "^0.12.0",
     "ru": "^0.0.0",
     "run": "^1.4.0",
+    "safe-buffer": "^5.2.1",
+    "safe-regex": "^1.1.0",
+    "safer-buffer": "^2.1.2",
+    "semver": "^5.7.1",
+    "semver-diff": "^2.1.0",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "set-blocking": "^2.0.0",
+    "set-value": "^2.0.1",
+    "setprototypeof": "^1.2.0",
+    "shebang-command": "^1.2.0",
+    "shebang-regex": "^1.0.0",
+    "shoe": "^0.0.15",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.7",
+    "smart-buffer": "^4.2.0",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "sockjs": "^0.3.7",
+    "sockjs-client": "^0.0.0-unreleasable",
+    "sockjs-stream": "^1.0.2",
+    "socks": "^2.6.2",
+    "socks-proxy-agent": "^6.2.1",
+    "source-map": "^0.5.7",
+    "source-map-resolve": "^0.5.3",
+    "source-map-url": "^0.4.1",
+    "split": "^0.2.10",
+    "split-string": "^3.1.0",
     "sqlite3": "^5.0.8",
-    "start": "node ./index.js",
-    "supertest": "^6.2.3",
-    "verbose": "^0.2.3"
-  }
+    "sshpk": "^1.17.0",
+    "ssri": "^8.0.1",
+    "static-extend": "^0.1.2",
+    "statuses": "^2.0.1",
+    "stream-combiner": "^0.0.2",
+    "string_decoder": "^1.3.0",
+    "string-width": "^2.1.1",
+    "strip-eof": "^1.0.0",
+    "strip-json-comments": "^2.0.1",
+    "superagent": "^7.1.5",
+    "supertest": "^6.2.4",
+    "supports-color": "^5.5.0",
+    "tar": "^6.1.11",
+    "term-size": "^1.2.0",
+    "through": "^2.3.8",
+    "through2": "^0.4.2",
+    "timed-out": "^4.0.1",
+    "tinycolor": "^0.0.1",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "to-regex-range": "^2.1.1",
+    "toidentifier": "^1.0.1",
+    "touch": "^3.1.0",
+    "tough-cookie": "^2.5.0",
+    "tr46": "^0.0.3",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "type-is": "^1.6.18",
+    "undefsafe": "^2.0.5",
+    "union-value": "^1.0.1",
+    "unique-filename": "^1.1.1",
+    "unique-slug": "^2.0.2",
+    "unique-string": "^1.0.0",
+    "unpipe": "^1.0.0",
+    "unset-value": "^1.0.0",
+    "unzip-response": "^2.0.1",
+    "upath": "^1.2.0",
+    "update-notifier": "^2.5.0",
+    "uri-js": "^4.4.1",
+    "urix": "^0.1.0",
+    "url-parse-lax": "^1.0.0",
+    "use": "^3.1.1",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "uuid": "^3.4.0",
+    "vary": "^1.1.2",
+    "verbose": "^0.2.3",
+    "verror": "^1.10.0",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0",
+    "which": "^2.0.2",
+    "wide-align": "^1.1.5",
+    "widest-line": "^2.0.1",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^2.4.3",
+    "ws": "^0.4.31",
+    "xdg-basedir": "^3.0.0",
+    "xmlhttprequest": "^1.8.0",
+    "xtend": "^2.1.2",
+    "yallist": "^4.0.0"
+  },
+  "scripts": {
+    "test": "start",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/XandiNeckel/EstudioTatto_M4.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/XandiNeckel/EstudioTatto_M4/issues"
+  },
+  "homepage": "https://github.com/XandiNeckel/EstudioTatto_M4#readme"
 }
