--- a/package.json
+++ b/package.json
@@ -387,7 +387,7 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
-    "test": "",
+    "test": "jest",
     "start": "node ./server.js"
   },
   "repository": {
